--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@ant-design/colors": "~6.0.0",
     "@mdi/font": "~5.9.55",
     "@vue/composition-api": "~1.0.0-rc.1",
-    "@vueuse/core": "~4.1.0",
+    "@vueuse/core": "~4.1.1",
     "axios": "~0.21.1",
     "better-scroll": "~2.2.0",
     "core-js": "~3.8.3",
@@ -49,10 +48,12 @@
   "devDependencies": {
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.15.0",
+    "@modyqyw/fabric": "~1.15.4",
+    "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.20",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.27",
+    "@types/nprogress": "~0.2.0",
     "@vue/cli-plugin-babel": "~4.5.11",
     "@vue/cli-plugin-eslint": "~4.5.11",
     "@vue/cli-plugin-router": "~4.5.11",
@@ -70,7 +71,7 @@
     "husky": "~4.3.8",
     "lint-staged": "~10.5.4",
     "markdownlint-cli": "~0.26.0",
-    "npm-check-updates": "~11.1.1",
+    "npm-check-updates": "~11.1.3",
     "prettier": "~2.2.1",
     "sass": "~1.32.7",
     "sass-loader": "~10.1.1",
