--- a/package.json
+++ b/package.json
@@ -25,19 +25,16 @@
   "main": "background.js",
   "dependencies": {
     "@mdi/font": "~5.9.55",
-    "@vue/composition-api": "~1.0.0-rc.1",
-    "@vueuse/core": "~4.1.1",
     "axios": "~0.21.1",
     "better-scroll": "~2.2.0",
     "core-js": "~3.8.3",
     "dayjs": "~1.10.4",
+    "faker": "~5.4.0",
     "lodash-es": "~4.17.20",
     "mitt": "~2.1.0",
-    "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
     "roboto-fontface": "~0.10.0",
-    "swrv": "~0.9.3",
     "vue": "~2.6.12",
     "vue-i18n": "~8.22.4",
     "vue-router": "~3.5.1",
