--- a/package.json
+++ b/package.json
@@ -36,16 +36,17 @@
     "portal-vue": "~2.1.7",
     "roboto-fontface": "~0.10.0",
     "vue": "~2.6.12",
-    "vue-i18n": "~8.22.4",
+    "vue-i18n": "~8.23.0",
     "vue-router": "~3.5.1",
-    "vuetify": "~2.4.4",
+    "vuetify": "~2.4.5",
     "vuex": "~3.6.2",
     "xe-utils": "~3.1.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "~12.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.16.1",
+    "@modyqyw/fabric": "~1.17.0",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.20",
     "@types/lodash-es": "~4.17.4",
@@ -60,7 +61,6 @@
     "@vue/test-utils": "~1.1.3",
     "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.3",
-    "commitlint": "~11.0.0",
     "compression-webpack-plugin": "~6.1.1",
     "electron": "~11.3.0",
     "electron-devtools-installer": "~3.1.1",
@@ -68,7 +68,7 @@
     "husky": "~4.3.8",
     "lint-staged": "~10.5.4",
     "markdownlint-cli": "~0.26.0",
-    "npm-check-updates": "~11.1.4",
+    "npm-check-updates": "~11.1.9",
     "prettier": "~2.2.1",
     "sass": "~1.32.8",
     "sass-loader": "~10.1.1",
