--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:unit": "vue-cli-service test:unit --coverage",
     "lint": "yarn lint:json && yarn lint:markdown && yarn lint:script && yarn lint:style && yarn lint:ls",
     "lint:json": "prettier ./**/*.json --write",
-    "lint:markdown": "markdownlint . --fix",
+    "lint:markdown": "markdownlint . --fix && lint-md . --fix",
     "lint:script": "vue-cli-service lint --fix",
     "lint:style": "stylelint ./**/*.{css,less,sass,scss,vue} --fix",
     "lint:ls": "ls-lint .",
@@ -42,9 +42,9 @@
     "portal-vue": "~2.1.7",
     "roboto-fontface": "~0.10.0",
     "vue": "~2.6.12",
-    "vue-i18n": "~8.24.0",
+    "vue-i18n": "~8.24.1",
     "vue-router": "~3.5.1",
-    "vuetify": "~2.4.6",
+    "vuetify": "~2.4.7",
     "vuex": "~3.6.2",
     "xe-utils": "~3.1.11"
   },
@@ -52,36 +52,37 @@
     "@commitlint/cli": "~12.0.1",
     "@intlify/vue-i18n-loader": "~1.1.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.20.1",
+    "@modyqyw/fabric": "~1.22.1",
     "@types/electron-devtools-installer": "~2.2.0",
-    "@types/jest": "~26.0.20",
+    "@types/jest": "~26.0.21",
     "@types/lodash-es": "~4.17.4",
-    "@types/node": "~14.14.33",
+    "@types/node": "~14.14.35",
     "@types/nprogress": "~0.2.0",
-    "@vue/cli-plugin-babel": "~4.5.11",
-    "@vue/cli-plugin-eslint": "~4.5.11",
-    "@vue/cli-plugin-router": "~4.5.11",
-    "@vue/cli-plugin-unit-jest": "~4.5.11",
-    "@vue/cli-plugin-vuex": "~4.5.11",
-    "@vue/cli-service": "~4.5.11",
+    "@vue/cli-plugin-babel": "~4.5.12",
+    "@vue/cli-plugin-eslint": "~4.5.12",
+    "@vue/cli-plugin-router": "~4.5.12",
+    "@vue/cli-plugin-unit-jest": "~4.5.12",
+    "@vue/cli-plugin-vuex": "~4.5.12",
+    "@vue/cli-service": "~4.5.12",
     "@vue/test-utils": "~1.1.3",
     "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.3",
     "compression-webpack-plugin": "~6.1.1",
     "electron": "~12.0.1",
     "electron-devtools-installer": "~3.1.1",
-    "eslint": "~7.21.0",
+    "eslint": "~7.22.0",
     "husky": "~4.3.8",
+    "lint-md-cli": "~0.1.2",
     "lint-staged": "~10.5.4",
     "markdownlint-cli": "~0.27.1",
-    "npm-check-updates": "~11.2.1",
+    "npm-check-updates": "~11.3.0",
     "prettier": "~2.2.1",
     "sass": "~1.32.8",
     "sass-loader": "~10.1.1",
     "stylelint": "~13.12.0",
     "stylelint-webpack-plugin": "~2.1.1",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
-    "vue-cli-plugin-i18n": "~2.0.0",
+    "vue-cli-plugin-i18n": "~2.0.2",
     "vue-cli-plugin-vuetify": "~2.2.2",
     "vue-template-compiler": "~2.6.12",
     "vuetify-loader": "~1.7.2"
@@ -102,7 +103,7 @@
   },
   "lint-staged": {
     "*.json": "prettier --write",
-    "*.md": "markdownlint --fix",
+    "*.md": "markdownlint --fix && lint-md --fix",
     "*.{js,jsx,ts,tsx,vue}": "vue-cli-service lint --fix",
     "*.{css,less,scss,vue}": "stylelint --fix"
   }
