--- a/package.json
+++ b/package.json
@@ -49,14 +49,16 @@
     "xe-utils": "~3.1.12"
   },
   "devDependencies": {
+    "@babel/core": "~7.13.14",
+    "@babel/eslint-parser": "~7.13.14",
     "@commitlint/cli": "~12.0.1",
     "@intlify/vue-i18n-loader": "~1.1.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.24.2",
+    "@modyqyw/fabric": "~1.25.1",
     "@types/electron-devtools-installer": "~2.2.0",
-    "@types/jest": "~26.0.21",
+    "@types/jest": "~26.0.22",
     "@types/lodash-es": "~4.17.4",
-    "@types/node": "~14.14.35",
+    "@types/node": "~14.14.37",
     "@types/nprogress": "~0.2.0",
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-plugin-eslint": "~4.5.12",
@@ -65,13 +67,13 @@
     "@vue/cli-plugin-vuex": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
     "@vue/test-utils": "~1.1.3",
-    "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.3",
     "compression-webpack-plugin": "~6.1.1",
     "electron": "~12.0.2",
     "electron-devtools-installer": "~3.1.1",
-    "eslint": "~7.22.0",
-    "husky": "~4.3.8",
+    "eslint": "~7.23.0",
+    "husky": "~6.0.0",
+    "is-ci": "~3.0.0",
     "lint-md-cli": "~0.1.2",
     "lint-staged": "~10.5.4",
     "markdownlint-cli": "~0.27.1",
@@ -82,7 +84,7 @@
     "stylelint": "~13.12.0",
     "stylelint-webpack-plugin": "~2.1.1",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
-    "vue-cli-plugin-i18n": "~2.0.2",
+    "vue-cli-plugin-i18n": "~2.0.3",
     "vue-cli-plugin-vuetify": "~2.3.1",
     "vue-template-compiler": "~2.6.12",
     "vuetify-loader": "~1.7.2"
