--- a/package.json
+++ b/package.json
@@ -32,60 +32,63 @@
   "main": "background.js",
   "dependencies": {
     "@mdi/font": "~5.9.55",
+    "@vue/composition-api": "~1.0.0-rc.8",
+    "@vueuse/core": "~4.11.0",
+    "@vueuse/integrations": "~4.11.0",
     "axios": "~0.21.1",
-    "core-js": "~3.11.0",
+    "core-js": "~3.12.1",
     "dayjs": "~1.10.4",
     "lodash-es": "~4.17.21",
-    "mockjs": "~1.1.0",
     "mitt": "~2.1.0",
+    "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
     "roboto-fontface": "~0.10.0",
     "vue": "~2.6.12",
-    "vue-i18n": "~8.24.3",
+    "vue-i18n": "~8.24.4",
     "vue-router": "~3.5.1",
-    "vuetify": "~2.4.11",
+    "vuetify": "~2.5.0",
     "vuex": "~3.6.2",
     "xe-utils": "~3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.13.16",
-    "@babel/eslint-parser": "~7.13.14",
-    "@commitlint/cli": "~12.1.1",
+    "@babel/core": "~7.14.2",
+    "@babel/eslint-parser": "~7.14.2",
+    "@commitlint/cli": "~12.1.4",
     "@intlify/vue-i18n-loader": "~1.1.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.28.1",
+    "@modyqyw/fabric": "~2.0.2",
     "@types/electron-devtools-installer": "~2.2.0",
-    "@types/jest": "~26.0.22",
+    "@types/jest": "~26.0.23",
     "@types/lodash-es": "~4.17.4",
-    "@types/node": "~14.14.41",
+    "@types/node": "~15.3.0",
     "@types/nprogress": "~0.2.0",
-    "@vue/cli-plugin-babel": "~4.5.12",
-    "@vue/cli-plugin-eslint": "~4.5.12",
-    "@vue/cli-plugin-router": "~4.5.12",
-    "@vue/cli-plugin-unit-jest": "~4.5.12",
-    "@vue/cli-plugin-vuex": "~4.5.12",
-    "@vue/cli-service": "~4.5.12",
-    "@vue/test-utils": "~1.1.4",
-    "commitizen": "~4.2.3",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-unit-jest": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
+    "@vue/test-utils": "~1.2.0",
+    "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~6.1.1",
-    "electron": "~12.0.5",
+    "electron": "~12.0.7",
     "electron-devtools-installer": "~3.2.0",
-    "eslint": "~7.25.0",
+    "eslint": "~7.26.0",
     "husky": "~6.0.0",
     "is-ci": "~3.0.0",
     "lint-md-cli": "~0.1.2",
-    "lint-staged": "~10.5.4",
+    "lint-staged": "~11.0.0",
     "markdownlint-cli": "~0.27.1",
-    "npm-check-updates": "~11.5.1",
-    "prettier": "~2.2.1",
-    "sass": "~1.32.11",
+    "npm-check-updates": "~11.5.12",
+    "prettier": "~2.3.0",
+    "sass": "~1.32.13",
     "sass-loader": "~10.1.1",
-    "stylelint": "~13.13.0",
+    "stylelint": "~13.13.1",
     "stylelint-webpack-plugin": "~2.1.1",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
+    "vue-cli-plugin-electron-builder": "~2.0.0",
     "vue-cli-plugin-i18n": "~2.1.0",
-    "vue-cli-plugin-vuetify": "~2.3.1",
+    "vue-cli-plugin-vuetify": "~2.4.0",
     "vue-template-compiler": "~2.6.12",
     "vuetify-loader": "~1.7.2"
   },
