--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "commit": "cz",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
     "test:unit": "vue-cli-service test:unit --coverage",
-    "lint": "yarn lint:json && yarn lint:markdown && yarn lint:script && yarn lint:style && yarn lint:ls",
+    "lint": "yarn lint:json && yarn lint:ls && yarn lint:markdown && yarn lint:script && yarn lint:style",
     "lint:json": "prettier ./**/*.json --write",
     "lint:markdown": "markdownlint . --fix && lint-md . --fix",
     "lint:script": "vue-cli-service lint --fix",
