--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "commit": "cz",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
     "test:unit": "vue-cli-service test:unit --coverage",
-    "lint": "yarn lint:json && yarn lint:ls && yarn lint:markdown && yarn lint:script && yarn lint:style",
-    "lint:json": "prettier ./**/*.json --write",
-    "lint:markdown": "markdownlint . --fix && lint-md . --fix",
+    "lint": "yarn run lint:json && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
+    "lint:json": "prettier ./**/*.json --write --ignore-path=.gitignore",
+    "lint:markdown": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:script": "vue-cli-service lint --fix",
-    "lint:style": "stylelint ./**/*.{css,less,sass,scss,vue} --fix",
-    "lint:ls": "ls-lint .",
+    "lint:style": "stylelint ./**/*.{css,less,sass,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "prepare": "is-ci || husky install"
@@ -32,64 +31,68 @@
   "main": "background.js",
   "dependencies": {
     "@mdi/font": "~5.9.55",
-    "@vue/composition-api": "~1.0.0-rc.8",
-    "@vueuse/core": "~4.11.0",
-    "@vueuse/integrations": "~4.11.0",
+    "@modyqyw/utils": "^0.6.0",
+    "@vue/composition-api": "~1.0.0-rc.13",
+    "@vueuse/core": "~5.1.3",
+    "@vueuse/electron": "~5.1.3",
+    "@vueuse/gesture": "~1.0.0",
+    "@vueuse/integrations": "~5.1.3",
+    "@vueuse/motion": "~1.5.6",
     "axios": "~0.21.1",
-    "core-js": "~3.12.1",
-    "dayjs": "~1.10.4",
+    "axios-retry": "~3.1.9",
+    "core-js": "~3.15.2",
+    "dayjs": "~1.10.6",
     "lodash-es": "~4.17.21",
-    "mitt": "~2.1.0",
+    "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
     "roboto-fontface": "~0.10.0",
-    "vue": "~2.6.12",
-    "vue-i18n": "~8.24.4",
-    "vue-router": "~3.5.1",
-    "vuetify": "~2.5.0",
+    "statuses": "~2.0.1",
+    "vue": "~2.6.14",
+    "vue-i18n": "8.24.5",
+    "vue-router": "~3.5.2",
+    "vuetify": "~2.5.6",
     "vuex": "~3.6.2",
-    "xe-utils": "~3.2.1"
+    "xe-utils": "~3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.14.2",
-    "@babel/eslint-parser": "~7.14.2",
+    "@babel/core": "~7.14.6",
+    "@babel/eslint-parser": "~7.14.7",
     "@commitlint/cli": "~12.1.4",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~2.0.2",
+    "@modyqyw/fabric": "~2.6.1",
     "@types/electron-devtools-installer": "~2.2.0",
-    "@types/jest": "~26.0.23",
+    "@types/jest": "~26.0.24",
     "@types/lodash-es": "~4.17.4",
-    "@types/node": "~15.3.0",
+    "@types/node": "~16.3.0",
     "@types/nprogress": "~0.2.0",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
-    "@vue/cli-plugin-unit-jest": "~4.5.13",
-    "@vue/cli-plugin-vuex": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
-    "@vue/test-utils": "~1.2.0",
+    "@types/statuses": "~2.0.0",
+    "@vue/cli-plugin-babel": "~5.0.0-beta.2",
+    "@vue/cli-plugin-eslint": "~5.0.0-beta.2",
+    "@vue/cli-plugin-router": "~5.0.0-beta.2",
+    "@vue/cli-plugin-unit-jest": "~5.0.0-beta.2",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.2",
+    "@vue/cli-service": "~5.0.0-beta.2",
+    "@vue/test-utils": "~1.2.1",
     "commitizen": "~4.2.4",
-    "compression-webpack-plugin": "~6.1.1",
-    "electron": "~12.0.7",
+    "compression-webpack-plugin": "~8.0.1",
+    "electron": "~13.1.6",
     "electron-devtools-installer": "~3.2.0",
-    "eslint": "~7.26.0",
-    "husky": "~6.0.0",
+    "eslint": "~7.30.0",
+    "husky": "~7.0.1",
     "is-ci": "~3.0.0",
-    "lint-md-cli": "~0.1.2",
     "lint-staged": "~11.0.0",
     "markdownlint-cli": "~0.27.1",
-    "npm-check-updates": "~11.5.12",
-    "prettier": "~2.3.0",
-    "sass": "~1.32.13",
-    "sass-loader": "~10.1.1",
+    "npm-check-updates": "~11.8.2",
+    "prettier": "~2.3.2",
+    "sass": "~1.35.2",
+    "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
-    "stylelint-webpack-plugin": "~2.1.1",
-    "vue-cli-plugin-electron-builder": "~2.0.0",
-    "vue-cli-plugin-i18n": "~2.1.0",
-    "vue-cli-plugin-vuetify": "~2.4.0",
-    "vue-template-compiler": "~2.6.12",
+    "stylelint-webpack-plugin": "~2.2.2",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "~2.6.14",
     "vuetify-loader": "~1.7.2"
   },
   "config": {
@@ -98,6 +101,6 @@
     }
   },
   "engines": {
-    "node": ">=12 <13"
+    "node": "^12 || ^14 || ^16"
   }
 }
