--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "main": "background.js",
   "dependencies": {
     "@mdi/font": "~5.9.55",
-    "@modyqyw/utils": "^0.6.0",
+    "@modyqyw/utils": "~0.6.0",
     "@vue/composition-api": "~1.0.0-rc.13",
     "@vueuse/core": "~5.1.3",
     "@vueuse/electron": "~5.1.3",
@@ -42,7 +42,6 @@
     "axios-retry": "~3.1.9",
     "core-js": "~3.15.2",
     "dayjs": "~1.10.6",
-    "lodash-es": "~4.17.21",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
@@ -53,8 +52,7 @@
     "vue-i18n": "8.24.5",
     "vue-router": "~3.5.2",
     "vuetify": "~2.5.6",
-    "vuex": "~3.6.2",
-    "xe-utils": "~3.3.0"
+    "vuex": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "~7.14.6",
@@ -64,7 +62,6 @@
     "@modyqyw/fabric": "~2.6.1",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.24",
-    "@types/lodash-es": "~4.17.4",
     "@types/node": "~16.3.0",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
@@ -77,7 +74,7 @@
     "@vue/test-utils": "~1.2.1",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~8.0.1",
-    "electron": "~13.1.6",
+    "electron": "13.1.6",
     "electron-devtools-installer": "~3.2.0",
     "eslint": "~7.30.0",
     "husky": "~7.0.1",
