--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@vueuse/integrations": "~5.1.3",
     "@vueuse/motion": "~1.5.6",
     "axios": "~0.21.1",
+    "axios-cache-adapter": "~2.7.3",
+    "axios-logger": "~2.5.0",
+    "axios-mock-adapter": "~1.19.0",
     "axios-retry": "~3.1.9",
     "core-js": "~3.15.2",
     "dayjs": "~1.10.6",
@@ -62,7 +65,7 @@
     "@modyqyw/fabric": "~2.6.1",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.24",
-    "@types/node": "~16.3.0",
+    "@types/node": "~16.3.1",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@vue/cli-plugin-babel": "~5.0.0-beta.2",
