--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "roboto-fontface": "~0.10.0",
     "statuses": "~2.0.1",
     "vue": "~2.6.14",
+    "vue-auto-routing": "~1.0.1",
     "vue-i18n": "~8.25.0",
     "vue-router": "~3.5.2",
+    "vue-router-layout": "~0.1.5",
     "vuetify": "~2.5.7",
     "vuex": "~3.6.2"
   },
@@ -92,6 +94,7 @@
     "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
     "stylelint-webpack-plugin": "~3.0.1",
+    "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-jest": "~3.0.7",
