--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:json": "prettier ./**/*.json --write --ignore-path=.gitignore",
     "lint:markdown": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:script": "vue-cli-service lint --fix",
-    "lint:style": "stylelint ./**/*.{css,less,sass,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
+    "lint:style": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "prepare": "is-ci || husky install",
@@ -30,21 +30,21 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@iconify/vue2": "~1.0.0-beta.1",
+    "@iconify/vue2": "~1.0.0",
     "@mdi/font": "~5.9.55",
     "@modyqyw/utils": "~0.7.0",
-    "@vue/composition-api": "~1.0.4",
-    "@vueuse/core": "~5.2.0",
-    "@vueuse/electron": "~5.2.0",
+    "@vue/composition-api": "~1.0.6",
+    "@vueuse/core": "~5.3.0",
+    "@vueuse/electron": "~5.3.0",
     "@vueuse/gesture": "~1.0.0",
-    "@vueuse/integrations": "~5.2.0",
+    "@vueuse/integrations": "~5.3.0",
     "@vueuse/motion": "~1.5.6",
     "axios": "~0.21.1",
     "axios-cache-adapter": "~2.7.3",
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.19.0",
     "axios-retry": "~3.1.9",
-    "core-js": "~3.16.0",
+    "core-js": "~3.16.1",
     "dayjs": "~1.10.6",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
@@ -57,20 +57,22 @@
     "vue-i18n": "~8.25.0",
     "vue-router": "~3.5.2",
     "vue-router-layout": "~0.1.5",
-    "vuetify": "~2.5.7",
+    "vuetify": "~2.5.8",
     "vuex": "~3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.14.8",
-    "@babel/eslint-parser": "~7.14.7",
+    "@babel/core": "~7.15.0",
+    "@babel/eslint-parser": "~7.15.0",
     "@commitlint/cli": "~13.1.0",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~2.9.0",
+    "@modyqyw/fabric": "~3.0.0-3",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.24",
-    "@types/node": "~16.4.7",
+    "@types/node": "~16.4.13",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
+    "@typescript-eslint/eslint-plugin": "~4.29.1",
+    "@typescript-eslint/parser": "~4.29.1",
     "@vue/cli-plugin-babel": "~5.0.0-beta.2",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.2",
     "@vue/cli-plugin-router": "~5.0.0-beta.2",
@@ -80,12 +82,12 @@
     "@vue/test-utils": "~1.2.2",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~8.0.1",
-    "electron": "13.1.7",
+    "electron": "13.1.8",
     "electron-devtools-installer": "~3.2.0",
-    "eslint": "~7.31.0",
+    "eslint": "~7.32.0",
     "husky": "~7.0.1",
     "is-ci": "~3.0.0",
-    "lint-staged": "~11.1.1",
+    "lint-staged": "~11.1.2",
     "markdownlint-cli": "~0.28.1",
     "npm-check-updates": "~11.8.3",
     "prettier": "~2.3.2",
@@ -93,9 +95,10 @@
     "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
     "stylelint-webpack-plugin": "~3.0.1",
+    "typescript": "~4.3.5",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
-    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-jest": "~3.0.7",
     "vue-template-compiler": "~2.6.14",
     "vuetify-loader": "~1.7.2"
