--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "@iconify/vue2": "~1.0.0",
     "@mdi/font": "~5.9.55",
     "@modyqyw/utils": "~0.7.0",
-    "@vue/composition-api": "~1.0.6",
-    "@vueuse/core": "~5.3.0",
-    "@vueuse/electron": "~5.3.0",
+    "@vue/composition-api": "~1.1.1",
+    "@vueuse/core": "~6.0.0",
+    "@vueuse/electron": "~6.0.0",
     "@vueuse/gesture": "~1.0.0",
-    "@vueuse/integrations": "~5.3.0",
+    "@vueuse/integrations": "~6.0.0",
     "@vueuse/motion": "~1.5.6",
     "axios": "~0.21.1",
     "axios-cache-adapter": "~2.7.3",
     "axios-logger": "~2.5.0",
-    "axios-mock-adapter": "~1.19.0",
+    "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.1.9",
     "core-js": "~3.16.1",
     "dayjs": "~1.10.6",
@@ -66,24 +66,25 @@
     "@babel/eslint-parser": "~7.15.0",
     "@commitlint/cli": "~13.1.0",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.0.0-4",
+    "@modyqyw/fabric": "~3.0.2",
     "@types/electron-devtools-installer": "~2.2.0",
-    "@types/jest": "~26.0.24",
-    "@types/node": "~16.4.13",
+    "@types/jest": "~27.0.1",
+    "@types/node": "~16.6.1",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~4.29.1",
-    "@typescript-eslint/parser": "~4.29.1",
-    "@vue/cli-plugin-babel": "~5.0.0-beta.2",
-    "@vue/cli-plugin-eslint": "~5.0.0-beta.2",
-    "@vue/cli-plugin-router": "~5.0.0-beta.2",
-    "@vue/cli-plugin-unit-jest": "~5.0.0-beta.2",
-    "@vue/cli-plugin-vuex": "~5.0.0-beta.2",
-    "@vue/cli-service": "~5.0.0-beta.2",
+    "@typescript-eslint/eslint-plugin": "~4.29.2",
+    "@typescript-eslint/parser": "~4.29.2",
+    "@vue/cli-plugin-babel": "~5.0.0-beta.3",
+    "@vue/cli-plugin-eslint": "~5.0.0-beta.3",
+    "@vue/cli-plugin-router": "~5.0.0-beta.3",
+    "@vue/cli-plugin-unit-jest": "~5.0.0-beta.3",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
+    "@vue/cli-service": "~5.0.0-beta.3",
+    "@vue/runtime-dom": "~3.2.3",
     "@vue/test-utils": "~1.2.2",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~8.0.1",
-    "electron": "13.1.8",
+    "electron": "13.1.9",
     "electron-devtools-installer": "~3.2.0",
     "eslint": "~7.32.0",
     "husky": "~7.0.1",
@@ -92,7 +93,7 @@
     "markdownlint-cli": "~0.28.1",
     "npm-check-updates": "~11.8.3",
     "prettier": "~2.3.2",
-    "release-it": "~14.11.3",
+    "release-it": "~14.11.5",
     "sass": "~1.32.13",
     "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
@@ -111,6 +112,7 @@
     }
   },
   "engines": {
-    "node": "^12 || ^14 || ^16"
+    "node": "^12.22.5 || ^14.17.5 || ^16.6.2",
+    "npm": "^6.14.14 || ^7.20.3"
   }
 }
