--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.1.9",
-    "core-js": "~3.16.1",
+    "core-js": "~3.16.2",
     "dayjs": "~1.10.6",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
@@ -80,11 +80,12 @@
     "@vue/cli-plugin-unit-jest": "~5.0.0-beta.3",
     "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
     "@vue/cli-service": "~5.0.0-beta.3",
-    "@vue/runtime-dom": "~3.2.3",
+    "@vue/runtime-dom": "~3.2.4",
     "@vue/test-utils": "~1.2.2",
+    "@vuedx/typescript-plugin-vue": "~0.7.4",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~8.0.1",
-    "electron": "13.1.9",
+    "electron": "13.2.1",
     "electron-devtools-installer": "~3.2.0",
     "eslint": "~7.32.0",
     "husky": "~7.0.1",
