--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "scripts": {
     "build": "vue-cli-service build --mode production --report",
+    "test:unit": "vue-cli-service test:unit --coverage --passWithNoTests",
+    "lint": "yarn run lint:json && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
     "check": "ncu",
     "commit": "cz",
     "dev": "vue-cli-service serve --mode development",
@@ -17,7 +19,6 @@
     "electron:dev": "vue-cli-service electron:serve",
     "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "lint": "pnpm run lint:json && pnpm run lint:markdown && pnpm run lint:script && pnpm run lint:style",
     "lint:json": "prettier ./**/*.json --write --ignore-path=.gitignore",
     "lint:markdown": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:script": "vue-cli-service lint --fix",
@@ -26,31 +27,33 @@
     "postuninstall": "electron-builder install-app-deps",
     "prepare": "is-ci || husky install",
     "release": "release-it",
-    "staging-build": "vue-cli-service build --mode staging --report",
-    "test:unit": "vue-cli-service test:unit --coverage --passWithNoTests"
+    "staging-build": "vue-cli-service build --mode staging --report"
   },
   "main": "background.js",
   "dependencies": {
+    "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.0.0",
-    "@mdi/font": "~5.9.55",
     "@modyqyw/utils": "~0.7.0",
-    "@vue/composition-api": "~1.1.1",
+    "@vue/composition-api": "~1.1.3",
     "@vueuse/core": "~6.0.0",
     "@vueuse/electron": "~6.0.0",
     "@vueuse/gesture": "~1.0.0",
     "@vueuse/integrations": "~6.0.0",
-    "@vueuse/motion": "~1.5.6",
+    "@vueuse/motion": "~1.6.0",
     "axios": "~0.21.1",
     "axios-cache-adapter": "~2.7.3",
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.1.9",
     "core-js": "~3.16.2",
+    "daisyui": "~1.13.2",
     "dayjs": "~1.10.6",
+    "element-ui": "~2.15.5",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
+    "ress": "^4.0.0",
     "roboto-fontface": "~0.10.0",
     "statuses": "~2.0.1",
     "vue": "~2.6.14",
@@ -58,7 +61,6 @@
     "vue-i18n": "~8.25.0",
     "vue-router": "~3.5.2",
     "vue-router-layout": "~0.1.5",
-    "vuetify": "~2.5.8",
     "vuex": "~3.6.2"
   },
   "devDependencies": {
@@ -66,10 +68,10 @@
     "@babel/eslint-parser": "~7.15.0",
     "@commitlint/cli": "~13.1.0",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.0.2",
+    "@modyqyw/fabric": "~3.0.3",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~27.0.1",
-    "@types/node": "~16.6.2",
+    "@types/node": "~16.7.1",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~4.29.2",
@@ -83,6 +85,11 @@
     "@vue/runtime-dom": "~3.2.4",
     "@vue/test-utils": "~1.2.2",
     "@vuedx/typescript-plugin-vue": "~0.7.4",
+    "@windicss/plugin-animations": "~1.0.9",
+    "@windicss/plugin-heropatterns": "~0.0.8",
+    "@windicss/plugin-interaction-variants": "~1.0.0",
+    "@windicss/plugin-question-mark": "~0.1.1",
+    "@windicss/plugin-scrollbar": "~1.2.3",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~8.0.1",
     "electron": "13.2.1",
@@ -90,6 +97,7 @@
     "eslint": "~7.32.0",
     "husky": "~7.0.1",
     "is-ci": "~3.0.0",
+    "less": "~4.1.1",
     "lint-staged": "~11.1.2",
     "markdownlint-cli": "~0.28.1",
     "npm-check-updates": "~11.8.3",
@@ -102,10 +110,10 @@
     "typescript": "~4.3.5",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
-    "vue-cli-plugin-vuetify": "~2.4.2",
+    "vue-cli-plugin-windicss": "~1.0.3",
     "vue-jest": "~3.0.7",
     "vue-template-compiler": "~2.6.14",
-    "vuetify-loader": "~1.7.2"
+    "windicss": "~3.1.7"
   },
   "config": {
     "commitizen": {
