--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.1.2",
     "@modyqyw/utils": "~2.1.2",
-    "@vue/composition-api": "~1.4.3",
+    "@vue/composition-api": "~1.4.4",
     "@vueuse/core": "~7.5.3",
     "@vueuse/integrations": "~7.5.3",
     "axios": "~0.24.0",
@@ -50,18 +50,18 @@
     "@babel/core": "~7.16.7",
     "@babel/eslint-parser": "~7.16.5",
     "@commitlint/cli": "~16.0.2",
-    "@iconify/json": "~1.1.456",
-    "@modyqyw/fabric": "~4.7.3",
+    "@iconify/json": "~1.1.457",
+    "@modyqyw/fabric": "~4.8.0",
     "@types/browser-update": "~3.3.0",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~5.9.1",
     "@typescript-eslint/parser": "~5.9.1",
     "@vitejs/plugin-legacy": "~1.6.4",
-    "@vue/runtime-dom": "~3.2.26",
+    "@vue/runtime-dom": "~3.2.27",
     "commitizen": "~4.2.4",
     "cross-env": "~7.0.3",
-    "eslint": "~8.6.0",
+    "eslint": "~8.7.0",
     "husky": "~7.0.4",
     "is-ci": "~3.0.1",
     "lint-staged": "~12.1.7",
@@ -71,7 +71,7 @@
     "postcss-flexbugs-fixes": "~5.0.2",
     "postcss-preset-env": "~7.2.3",
     "prettier": "~2.5.1",
-    "release-it": "~14.12.1",
+    "release-it": "~14.12.3",
     "rimraf": "~3.0.2",
     "sass": "~1.48.0",
     "shelljs": "~0.8.5",
@@ -79,7 +79,7 @@
     "type-fest": "~2.9.0",
     "typescript": "~4.5.4",
     "unplugin-icons": "~0.13.0",
-    "unplugin-vue-components": "~0.17.11",
+    "unplugin-vue-components": "~0.17.13",
     "unplugin-vue2-script-setup": "~0.9.0",
     "vite": "~2.7.12",
     "vite-plugin-compression": "~0.4.0",
@@ -91,6 +91,6 @@
     "vite-plugin-vue-layouts": "~0.5.0",
     "vite-plugin-vue2": "~1.9.2",
     "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.30.2"
+    "vue-tsc": "0.30.2"
   }
 }
