--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     }
   },
   "dependencies": {
-    "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.1.3",
     "@modyqyw/utils": "~2.1.2",
     "@vue/composition-api": "~1.4.5",
@@ -31,14 +30,14 @@
     "@vueuse/integrations": "~7.5.5",
     "axios": "~0.25.0",
     "browser-update": "~3.3.37",
+    "color": "~4.2.0",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.7",
     "modern-normalize": "~1.1.0",
     "nprogress": "~0.2.0",
     "pinia": "~2.0.11",
-    "query-string": "~7.1.0",
+    "query-string": "~7.1.1",
     "statuses": "~2.0.1",
-    "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
     "vue-query": "~1.19.0",
     "vue-router": "~3.5.3",
@@ -51,6 +50,7 @@
     "@iconify/json": "~2.0.33",
     "@modyqyw/fabric": "~4.11.0",
     "@types/browser-update": "~3.3.0",
+    "@types/color": "~3.0.3",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~5.10.2",
@@ -63,7 +63,7 @@
     "husky": "~7.0.4",
     "is-ci": "~3.0.1",
     "lint-staged": "~12.3.3",
-    "markdownlint-cli": "~0.30.0",
+    "markdownlint-cli": "~0.31.0",
     "npm-check-updates": "~12.2.1",
     "picocolors": "~1.0.0",
     "postcss-flexbugs-fixes": "~5.0.2",
@@ -74,10 +74,11 @@
     "sass": "~1.49.7",
     "shelljs": "~0.8.5",
     "stylelint": "~14.3.0",
+    "tailwindcss": "~1.9.6",
     "type-fest": "~2.11.1",
     "typescript": "~4.5.5",
     "unplugin-icons": "~0.13.0",
-    "unplugin-vue-components": "~0.17.15",
+    "unplugin-vue-components": "~0.17.17",
     "unplugin-vue2-script-setup": "~0.9.1",
     "vite": "~2.7.13",
     "vite-plugin-compression": "~0.5.1",
@@ -86,9 +87,9 @@
     "vite-plugin-mkcert": "~1.5.2",
     "vite-plugin-pages": "~0.20.1",
     "vite-plugin-stylelint": "~1.1.0",
-    "vite-plugin-vue-layouts": "~0.5.0",
+    "vite-plugin-vue-layouts": "~0.6.0",
     "vite-plugin-vue2": "~1.9.3",
     "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.31.1"
+    "vue-tsc": "~0.31.2"
   }
 }
