--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "vue": "~2.6.14",
     "vue-query": "~1.19.0",
     "vue-router": "~3.5.3",
-    "vue2-helpers": "~1.1.7"
+    "vue2-helpers": "~1.1.7",
+    "vuex": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "~7.17.0",
